[PE] Invalidate the box's obscuration status when invalidating paint.

Previously it would only invalidate parents, but the box itself
may also change status.

Bug: 778688
Change-Id: Ia4efbb18b2e41cd45882486e9863e6b2779798ca
Reviewed-on: https://chromium-review.googlesource.com/845127
Commit-Queue: Xianzhu Wang <wangxianzhu@chromium.org>
Reviewed-by: Xianzhu Wang <wangxianzhu@chromium.org>
Cr-Commit-Position: refs/heads/master@{#526272}
Former-commit-id: 0a3e23b889a3b94d2a8f849069d53709dec8cbd3